--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,13 @@ nav{
     background-color: rgb(188, 117, 182);
 }
 
+.box-grande{
+    display: flex;
+    width: 920px;
+    margin: auto;
+    height: 400px;
+}
+
 
 /* ------------------------------------ */
 /* colori-box */
@@ -78,6 +85,10 @@ nav{
 
 .grigio{
     background-color: gray;
+}
+
+.verde{
+    background-color: green;
 }
 
 /* ------------------------------------ */
