--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 /* nav */
 nav{
     background-color: yellow;
-    width: 60%;
+    width: 920px;
     margin: auto;
     display: flex;
     padding: .5rem 1rem;
